Update NIO/FFI/Graphics/Console API, add JSON API, lots of bugfixes